--- a/frontend/style.css
+++ b/frontend/style.css
@@ -53,7 +53,7 @@
     font-family: "Sanchez", serif;
     background-size: contain;
   }
-  .second-intro h1{
+  h1{
     color: red;
   }
   .second-intro p{
