--- a/frontend/style.css
+++ b/frontend/style.css
@@ -5,7 +5,11 @@
     padding: 0;
     font-family: "Sanchez", serif;
 }
-
+body{
+  background-image: url(images/bg.jpg);
+  background-size: contain;
+  background-repeat: repeat;
+}
 .intro{
     position: relative;
     width: 100%;
